6_Application/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-database
spec:
  type: ClusterIP
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: todo
    tier: database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-database
  labels:
    app: todo
    tier: database
spec:
  selector:
    matchLabels:
      app: todo
      tier: database
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: todo
        tier: database
    spec:
      containers:
      - image: postgres:12-alpine
        imagePullPolicy: IfNotPresent
        name: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-persistent-storage
          mountPath: /var/lib/postgresql/data
          subPath: postgres
      volumes:
      - name: postgres-persistent-storage
        persistentVolumeClaim:
          claimName: postgres-pv-claim
