6_Application/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-todo-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt"
spec:
  rules:
  - host: todo.democluster.dasmulli.at
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-frontend
          servicePort: 80
      - path: /api/
        backend:
          serviceName: demo-backend
          servicePort: 80
  tls:
  - hosts:
    - '*.democluster.dasmulli.at'
    secretName: democluster-wildcard-tls
